--- a/Index.html
+++ b/Index.html
@@ -47,11 +47,11 @@
                 <div class="row" style="height:auto; min-height: 70vh; margin-top: 120px; background: rgba(255, 255, 255, 0.05); box-shadow: 0px 10px 25px rgba(0,0,0,0.2); border-radius: 10px; backdrop-filter: blur(15%);">
                     <div class="col-md-6">
                         <div class="home-text">
-                            <h1>GTA Car Scraping</h1>
+                            <h1>GTA Car Scrapping</h1>
                             <h2>A RELIABLE TOWING & SCRAPPING SERVICE IN CANADA</h2>
                             <h3>Get Cash for your<br/> Old, Broken, <br/>Useless, Unwanted Cars</h3>
                             <h4>We're One Call Away</h4>
-                            <h5>Cal Us Now At <br/>647-000000</h5>
+                            <h5>Cal Us Now At <br/>000-000000</h5>
                             <div class="home-social">
                                 <ul class="sci">
                                     <li><a href="#"><img src="Include/Icons/facebook-app-symbol.png"></a></li>
@@ -74,7 +74,7 @@
                                 <div class="item active">
                                     <div class="sli-text">
                                         <h3>Make A Call</h3>
-                                        <p>We are Just one call away from you. Call us at 647-000-0000 to speak to a live representative for a fast service.</p>
+                                        <p>We are Just one call away from you. Call us at 000-000-0000 to speak to a live representative for a fast service.</p>
                                     </div>
                                     <div class="home-img1"></div>
                                 </div>
@@ -248,8 +248,8 @@
                                 <h1>Contacts</h1>
                                 <h2>Phone</h2>
                                 <div class="contact-icon"></div>
-                                <h3>647-000-0000</h3>
-                                <h3>416-000-0000</h3>
+                                <h3>000-000-0000</h3>
+                                <h3>000-000-0000</h3>
                                 <h4>Email</h4>
                                 <h5>gtacarscraping@gmail.com</h5>
                                 <h5>ahmadnassimi@yahoo.com</h5>
